--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <div class="footer">
   <h2>About Us</h2>
-  <p>Done By S.Karthikeyan CEG IT First Year.</p>
+  <p>Done By S.Karthikeyan, Sheikh haji,Thivagaran CEG IT First Year.</p>
 </div>
 <script>
 var slideIndex = 1;
